# cubesat-magnetic-attitude-estimation

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: attitude_dynamics.md  geomagnetic_field.md  index.md  magnetometer_model.md  numerical_methods.md  orbital_mechanics.md  reference_frames.md
outputs/: orbit_timeseries.csv
outputs/visualisation/: index.html  orbit.czml
simulation/: __init__.py  attitude.py  config.py  frames.py  geomagnetic.py  helpers.py  interfaces.py  orbit_provider.py  pipeline.py  plots.py  results.py  runner.py  sensors.py  types.py
simulation/attitude/: __init__.py  dynamics.py  projection.py  rotations.py
simulation/config/: __init__.py  loading.py
simulation/estimation/: AEKF.py  __init__.py
simulation/frames/: __init__.py  transformer.py
simulation/io/: __init__.py  results.py
simulation/magnetic/: __init__.py
simulation/orbit/: __init__.py  provider.py
simulation/pipeline/: __init__.py  outputs.py  runner.py
simulation/sensors/: __init__.py  magnetometer.py
simulation/settings/: orbit.yaml  satellite.yaml
simulation/tests/: __init__.py  test_aekf.py  test_attitude.py  test_frames.py  test_geomagnetic.py  test_helpers.py  test_kalman_outputs.py  test_runner.py  test_sensors.py
simulation/tests/data/: magnetic_injections.json
simulation/visualisation/: README.md  __init__.py  cesium.py
simulation/visualization/: __init__.py  plots.py
